Added ViewModel for Park, fixed up About with a ton of CSS to make it look pretty. Added mapping configuration to go with the view model and included a dict for full state names

--- a/ParksService/ParksService/ParksService.csproj
+++ b/ParksService/ParksService/ParksService.csproj
@@ -5,9 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Scripts\DataAccessScripts.js" />
+    <None Include="wwwroot\Scripts\DirectoryScripts.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Scripts\" />
   </ItemGroup>
 
 </Project>
