Finished Explore, but still need to write details views (just have placeholders now). Fixed some CSS to make the site look cleaner

--- a/ParksService/ParksService/ParksService.csproj
+++ b/ParksService/ParksService/ParksService.csproj
@@ -23,4 +23,8 @@
     <Folder Include="bin\Debug\netcoreapp2.1\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="wwwroot\Scripts\DataAccessScripts.js" />
+    <Content Remove="wwwroot\Scripts\DirectoryScripts.js" />
+  </ItemGroup>
 </Project>
