Fixed "View Details" on the Explore page. Now it brings up a formatted BootBox popup instead of a new page with no CSS. This offers the same information as the details on the Directory page, but the point is that I'm accessing data in a different way without the help of DataTables.

--- a/ParksService/ParksService/ParksService.csproj
+++ b/ParksService/ParksService/ParksService.csproj
@@ -26,5 +26,6 @@
   <ItemGroup>
     <Content Remove="wwwroot\Scripts\DataAccessScripts.js" />
     <Content Remove="wwwroot\Scripts\DirectoryScripts.js" />
+    <Content Remove="wwwroot\Scripts\Helpers\BootBoxHelper.js" />
   </ItemGroup>
 </Project>
