--- a/ParksService/ParksService/ParksService.csproj
+++ b/ParksService/ParksService/ParksService.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
         <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="2.0.0" />
         <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.1.1" />
     </ItemGroup>
     <ItemGroup>
         <None Include="wwwroot\Scripts\DataAccessScripts.js" />
