--- a/ParksService/ParksService/web.config
+++ b/ParksService/ParksService/web.config
@@ -2,6 +2,7 @@
 <configuration>
     <system.webServer>
         <staticContent>
+            <remove fileExtension=".json" />
             <mimeMap fileExtension=".json" mimeType="application/json" />
         </staticContent>
     </system.webServer>
