--- a/ParksService/ParksService/ParksService.csproj
+++ b/ParksService/ParksService/ParksService.csproj
@@ -7,9 +7,10 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
         <PackageReference Include="bootstrap" Version="4.3.1" />
-        <PackageReference Include="Microsoft.AspNetCore.App">
+        <PackageReference Include="Microsoft.AspNetCore.App" Version="$(AspNetCoreAppRuntimeFrameworkVersion)">
           <PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
           <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
+          <IsImplicitlyDefined>true</IsImplicitlyDefined>
         </PackageReference>
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
