--- a/ParksService/ParksService/ParksService.csproj
+++ b/ParksService/ParksService/ParksService.csproj
@@ -4,6 +4,12 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+      <LangVersion>latestmajor</LangVersion>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+      <LangVersion>latestmajor</LangVersion>
+    </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
         <PackageReference Include="bootstrap" Version="4.4.1" />
